# mastobots

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.config.example.yaml  main.py  mastobots.py  pyproject.toml
botbeings/: __init__.py  argument_autorite_bot.py  blagues_bot.py  boost_bot.py  bot_factory.py  favourite_bot.py  follow_bot.py  jobs_bot.py  pataphysics_bot.py  quote_bot.py  toni_mastodoni.py
