[tool.poetry]
name = "mastobots"
version = "0.1.0"
description = "League of Super BotBeings of Mastodon"
authors = ["Guilhem Allaman <contact@guilhemallaman.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mastodon-py = "^1.8.0"
pyyaml = "^6.0"
colorlog = "^6.7.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
