[tool.poetry]
name = "mastobots"
version = "0.1.0"
description = "Various and diverse bots in the fediverse using mastodon API"
authors = ["Guilhem Allaman <contact@guilhemallaman.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mastodon-py = "^1.8.0"
pyyaml = "^6.0"
colorlog = "^6.7.0"
pylirecouleur = "^0.0.5"
wikiquote = "^0.1.16"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
types-pyyaml = "^6.0.12.8"
types-requests = "^2.28.11.16"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
